# realty-alerts

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  django_setup.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  query_schema.json  skills-lock.json
.claude/: settings.json
services/api/: .dockerignore  Dockerfile  README.md  manage.py  pyproject.toml
services/api/accounts/: admin.py  api.py  auth.py  cleanup.py  models.py  mru.py  schemas.py  tasks.py
services/api/accounts/migrations/: 0001_initial.py  0002_favorite.py  0003_residenceview.py
services/api/alembic/: env.py
services/api/alembic/versions/: a1b2c3d4e5f6_add_price_cents_to_listings.py  eda605197328_initial_schema.py
services/api/realty_api/: __init__.py  asgi.py  celery.py  env.py  urls.py  wsgi.py
services/api/realty_api/settings/: base.py  ci.py  local.py  prod.py  test.py
services/api/scraping/: adapters.py  admin.py  api.py  bag_client.py  cleanup.py  context_processors.py  forms.py  middleware.py  models.py  parsing.py  reconciliation.py  schemas.py  selectors.py  services.py  tasks.py  throttling.py
services/api/scraping/migrations/: 0001_initial.py  0001_squashed_0030_residence_neighbourhood_code.py  0002_deadlisting_bag_id.py  0002_rename_price_cents_to_price_eur.py  0003_alter_listing_image_url.py  0003_feedback.py  0003_listing_status_values.py  0004_add_structured_address_fields.py  0004_listing_status_changed_at.py  0004_rename_deadlisting_deadresidence_and_more.py  0004_residence_trgm_search.py  0005_add_bag_id.py  0005_configure_site.py  0005_rename_listing_to_residence.py  0006_listing_house_letter.py  0006_rename_listingurl_to_listing.py  0007_alter_listing_residence.py  0007_deadlisting.py  0008_bag_id_unique_listing_urls.py  0008_listing_per_portal_fields_residence_aggregates.py  0009_pivot_residence_filter_index.py  0010_pr5_drop_legacy.py  0011_drop_legacy_residence_columns.py  0012_rename_scrape_run_and_scraped_at.py  0013_add_detail_scrape_run.py  0014_add_listing_detail_fields.py  0015_residence_coordinates.py  0016_residence_neighbourhood.py  0017_cbs_geo_stats.py  0018_split_fetched_at.py  0019_add_building_details_to_residence.py  0020_add_building_construction_type_fields.py  0020_add_foundation_risk_fields.py  0020_add_soil_status_fields.py  0020_add_zoning_fields.py  0021_add_soil_status_fields.py  0022_add_foundation_risk_fields.py  0023_add_building_construction_type_fields.py  0024_add_foundation_risk_detail_fields.py  0025_rename_and_add_soil_fields.py  (+6 more)
services/api/scraping/resolvers/: __init__.py  chain.py  coordinates.py  kadaster.py  location.py  pdok.py  types.py
services/api/scraping/services/: bestemmingsplan.py  bodemloket.py  cbs.py  elections.py  ep_online.py  pdok_foundation_risk.py
services/api/scraping/templatetags/: mjml.py
services/api/src/: config.py  database.py  dependencies.py  enums.py  main.py  utils.py
services/api/src/app/: config.py  database.py  dependencies.py  main.py
services/api/src/matching/: engine.py
services/api/src/models/: filter.py  listing.py  scrape_run.py  user.py
services/api/src/routers/: filters.py  health.py  internal.py  listings.py  scrape_runs.py  users.py
services/api/src/schemas/: filter.py  scrape_run.py  user.py
services/api/src/services/: filter_service.py  push.py
services/api/tests/: conftest.py  factories.py  test_account_deletion.py  test_accounts_models.py  test_auth.py  test_backfill_listing_attributes.py  test_bag_client.py  test_bestemmingsplan.py  test_bodemloket.py  test_build_year.py  test_cache_settings.py  test_cbs_admin.py  test_cbs_client.py  test_cbs_fetcher.py  test_cbs_service.py  test_cbs_tasks.py  test_celery.py  test_cities.py  test_cleanup.py  test_client_ip.py  test_coordinates.py  test_cors.py  test_dead_listing_promotion.py  test_dead_residence_promotion.py  test_detail_result.py  test_detail_scrape.py  test_elections.py  test_email_i18n.py  test_email_mjml.py  test_email_templates.py  test_enrich_tasks.py  test_env.py  test_ep_online.py  test_favorites_api.py  test_favorites_model.py  test_feedback.py  test_geo_stats_admin.py  test_google_oauth.py  test_health.py  test_internal.py  (+37 more)
services/scraper/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/scraper/src/: client.py  enums.py  runner.py  settings.py
services/scraper/src/fetch/: http.py  playwright.py
services/scraper/src/scraper/: __main__.py  address.py  bag.py  client.py  enums.py  models.py  parsing.py  protocols.py  runner.py  settings.py  status.py
services/scraper/src/scrapers/: funda.py  pararius.py  vastgoed_nl.py
services/scraper/tests/: conftest.py  test_address.py  test_bag.py  test_client.py  test_dead_letter_queue.py  test_parsing.py  test_runner.py  test_settings.py  test_status.py
services/scraper/tests/data/: funda_1.html  funda_2.html  funda_detail.html  funda_listing.html  funda_scraper_detected.html  pararius_detail.html  pararius_listing.html  vastgoed_nl_detail.html  vastgoed_nl_listing.html
(+354 files in other folders)
