[project]
name = "realty-alerts"
version = "0.1.0"
description = "Realty Alerts is a simple alerting tool for notifying when new homes become available for purchase on Dutch real estate websites, such as Funda.nl."
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "C",   # mccabe
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
]
