[project]
name = "realty-alerts"
version = "0.1.0"
description = "Realty Alerts is a simple alerting tool for notifying when new homes become available for purchase on Dutch real estate websites, such as Funda.nl."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "celery[redis]>=5.5.3",
    "cron-validator>=1.0.8",
    "peewee>=3.18.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "pytest-playwright>=0.7.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "C",   # mccabe
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
]
