[project]
name = "realty-alerts-api"
version = "0.1.0"
description = "Django + Ninja backend for Realty Alerts — listings and scrape-run tracking."
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=2.3",
    "django>=5.1",
    "django-ninja>=1.3",
    "gunicorn>=23",
    "loguru>=0.7",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.9",
    "secret-key-generator>=0.0.8",
    "whitenoise>=6.8",
]

[dependency-groups]
dev = [
    "django-types>=0.24.0",
    "factory-boy>=3.3",
    "pytest>=8.4",
    "pytest-django>=4.9",
    "ruff>=0.12",
    "ty>=0.0.32",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "C",   # mccabe
    "E",   # pycodestyle
    "F",   # pyflakes
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "realty_api.settings.local"
python_files = "test_*.py"
addopts = ["--reuse-db", "-ra"]

[tool.ty.environment]
python-version = "3.12"
