[project]
name = "realty-alerts-api"
version = "0.1.0"
description = "Django + Ninja backend for Realty Alerts — listings and scrape-run tracking."
requires-python = ">=3.14"
dependencies = [
    "celery[redis]>=5.5",
    "dj-database-url>=2.3",
    "django>=6.0.4",
    "django-celery-beat>=2.7",
    "django-celery-results>=2.5",
    "django-ninja>=1.6",
    "gunicorn>=23",
    "loguru>=0.7",
    "psycopg[binary]>=3.3",
    "pydantic-settings>=2.9",
    "secret-key-generator>=0.0.8",
    "whitenoise>=6.8",
]

[dependency-groups]
dev = [
    "django-types>=0.24.0",
    "factory-boy>=3.3",
    "pytest>=8.4",
    "pytest-django>=4.9",
    "ruff>=0.15",
    "ty>=0.0.32",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "C",   # mccabe
    "E",   # pycodestyle
    "F",   # pyflakes
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "realty_api.settings.local"
python_files = "test_*.py"
addopts = ["--reuse-db", "-ra"]

[tool.ty.environment]
python-version = "3.14"
